Removing storing of actual clique data in the EdgeMappedCliqueCollection in favor of just clique counts per edge.